# micropsi

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg  test.py  version.py
examples/: find_minimum_example.py
micropsi/: __init__.py  main.py
micropsi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
micropsi/util/: __init__.py  error.py  logger.py
tests/: test_find_minimum.py
