[metadata]
name = micropsi
version = attr: micropsi.version.VERSION
description = Micropsi Industries coding challenge to find the minimum of an array
long_description = file: README.md
long_description_content_type = text/markdown
author = Microspsi Industries
author_email = support@micropsi.com
url = https://github.com/openai/openai-python
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.1
zip_safe = True
include_package_data = True
# install_requires =
#   requests >= 2.20  # to get the patch for CVE-2018-18074
#   tqdm  # Needed for progress bars
#   typing_extensions; python_version<"3.8"  # Needed for type hints for mypy
#   pytest  # Needed for testing 

[options.extras_require]
dev =
  pytest == 6.*

[options.entry_points]
console_scripts =
  micropsi = micropsi.main:find_minimum

[options.packages.find]
exclude =
  tests
  tests.*