[metadata]
name = micropsi
version = attr: micropsi.version.VERSION
description = Micropsi Industries coding challenge to find the minimum of an array
long_description = file: README.md
long_description_content_type = text/markdown
author = Microspsi Industries
author_email = support@micropsi.com
url = https://github.com/Basillica/micropsi
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5.0
zip_safe = True
include_package_data = True

[options.extras_require]
dev =
  pytest == 6.*

[options.entry_points]
console_scripts =
  micropsi = micropsi.main:find_minimum

[options.packages.find]
exclude =
  tests
  tests.*